2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* EndpointPermission.cs: Fix IsSubsetof(hostname) so that the regression 
	  tests work.  In particular, IsSubsetOf ("12.13.*.*", "12.13.14.*") failed
	  because 14 wasn't a subset of * (which it is).  Fix: if part1 is we 
	  continue to the next portion.

2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* IPAddress.cs (ParseIPV4): Fix so that the regression tests work.  In
	  particular, " foo" and ".1.1.6" weren't being caught (" foo" because it
	  started with a space, and ".1.1.6" because the split string accepted a
	  0-length portion, which would make 1...6 valid, but isn't valid based on
	  similar test cases).

2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* WebHeaderCollection.cs: Fix GetValues(string) to split the values on
	  commas if the header is a Multi-Value header.  This matches
	  MonoTests.System.Net.WebHeaderCollectionTest.

2005-01-19  Sebastien Pouliot  <sebastien@ximian.com>

	* WebPermissionAttribute.cs: Fixed NET_1_1 behaviour.

2004-12-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* WebConnectionStream.cs: remove unneeded check. Write detects and
	triggers the exception now.

2004-12-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AuthenticationManager.cs: don't lock on a public Type.
	* HttpWebRequest.cs: read the error response for auth. errors.

2004-12-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebRequest.cs: set webResponse back to null when redirecting.
	Fix the previous patch so that it reads the whole response even if
	auto-redirect is not enabled. Closes bug #70484.

2004-12-12 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpWebResponse.cs: added ReadAll method.

	* WebConnection.cs: in HandleError, set the response error after
	closing the socket. Use an async. delegate to finish reading any prior
	WebConnectionStream.

	* HttpWebRequest.cs: for error responses that allow content, read the
	stream immediately. Fixes bug #70483.
